配置信息更正